fix package name

--- a/cookbooks/fail2ban/templates/default/jail.conf.erb
+++ b/cookbooks/fail2ban/templates/default/jail.conf.erb
@@ -178,7 +178,7 @@ logpath  = /var/log/apache2/error_log
 
 [php-url-fopen]
 
-enabled = true
+enabled = false
 port    = http,https
 filter  = php-url-fopen
 logpath = /var/logs/httpd/access_log
