--- a/cookbooks/fail2ban/templates/default/fail2ban.conf.erb
+++ b/cookbooks/fail2ban/templates/default/fail2ban.conf.erb
@@ -1,12 +1,8 @@
-# Fail2Ban main configuration file
+# Fail2Ban configuration file
 #
-# Comments: use '#' for comment lines and ';' for inline comments
+# Author: Cyril Jaquier
 #
-# Changes:  in most of the cases you should not modify this
-#           file, but provide customizations in fail2ban.local file, e.g.:
-#
-# [Definition]
-# loglevel = 4
+# $Revision: 629 $
 #
 
 [Definition]
