--- a/cookbooks/fail2ban/templates/default/jail.conf.erb
+++ b/cookbooks/fail2ban/templates/default/jail.conf.erb
@@ -1,18 +1,11 @@
-# Fail2Ban jail specifications file
+# Fail2Ban configuration file
 #
-# Comments: use '#' for comment lines and ';' for inline comments
+# Author: Cyril Jaquier
 #
-# Changes:  in most of the cases you should not modify this
-#           file, but provide customizations in jail.local file, e.g.:
-#
-# [DEFAULT]
-# bantime = 3600
-#
-# [ssh-iptables]
-# enabled = true
+# $Revision: 617 $
 #
 
-# The DEFAULT allows a global definition of the options. They can be overridden
+# The DEFAULT allows a global definition of the options. They can be override
 # in each jail afterwards.
 
 [DEFAULT]
@@ -20,7 +13,7 @@
 # "ignoreip" can be an IP address, a CIDR mask or a DNS host. Fail2ban will not
 # ban a host which matches an address in this list. Several addresses can be
 # defined using space separator.
-ignoreip = 127.0.0.1/8
+ignoreip = 127.0.0.1
 
 # "bantime" is the number of seconds that a host is banned.
 bantime  = 600
@@ -32,28 +25,15 @@ findtime  = 600
 # "maxretry" is the number of failures before a host get banned.
 maxretry = 3
 
-# "backend" specifies the backend used to get files modification.
-# Available options are "pyinotify", "gamin", "polling" and "auto".
-# This option can be overridden in each jail as well.
+# "backend" specifies the backend used to get files modification. Available
+# options are "gamin", "polling" and "auto". This option can be overridden in
+# each jail too (use "gamin" for a jail and "polling" for another).
 #
-# pyinotify: requires pyinotify (a file alteration monitor) to be installed.
-#              If pyinotify is not installed, Fail2ban will use auto.
-# gamin:     requires Gamin (a file alteration monitor) to be installed.
-#              If Gamin is not installed, Fail2ban will use auto.
-# polling:   uses a polling algorithm which does not require external libraries.
-# auto:      will try to use the following backends, in order:
-#              pyinotify, gamin, polling.
+# gamin:   requires Gamin (a file alteration monitor) to be installed. If Gamin
+#          is not installed, Fail2ban will use polling.
+# polling: uses a polling algorithm which does not require external libraries.
+# auto:    will choose Gamin if available and polling otherwise.
 backend = auto
-
-# "usedns" specifies if jails should trust hostnames in logs,
-#   warn when reverse DNS lookups are performed, or ignore all hostnames in logs
-#
-# yes:   if a hostname is encountered, a reverse DNS lookup will be performed.
-# warn:  if a hostname is encountered, a reverse DNS lookup will be performed, 
-#        but it will be logged as a warning.
-# no:    if a hostname is encountered, will not be used for banning,
-#        but it will be logged as info.
-usedns = warn
 
 
 # This jail corresponds to the standard configuration in Fail2ban 0.6.
@@ -62,19 +42,20 @@ usedns = warn
 
 [ssh-iptables]
 
-enabled  = enable
+enabled  = true
 filter   = sshd
 action   = iptables[name=SSH, port=ssh, protocol=tcp]
-           sendmail-whois[name=SSH, dest=curt_wilhelm@yahoo.com, sender=fail2ban@mtbcoach.com.com]
-logpath  = /var/log/sshd.log
-maxretry = 5
+           sendmail-whois[name=SSH, dest=curt_wilhelm@yahoo.com, sender=fail2ban@mtbcoach.com]
+logpath  = /var/log/secure
+maxretry = 3
+bantime = 600000
 
 [proftpd-iptables]
 
 enabled  = false
 filter   = proftpd
 action   = iptables[name=ProFTPD, port=ftp, protocol=tcp]
-           sendmail-whois[name=ProFTPD, dest=you@example.com]
+           sendmail-whois[name=ProFTPD, dest=you@mail.com]
 logpath  = /var/log/proftpd/proftpd.log
 maxretry = 6
 
@@ -86,7 +67,7 @@ enabled  = false
 filter   = sasl
 backend  = polling
 action   = iptables[name=sasl, port=smtp, protocol=tcp]
-           sendmail-whois[name=sasl, dest=you@example.com]
+           sendmail-whois[name=sasl, dest=you@mail.com]
 logpath  = /var/log/mail.log
 
 # Here we use TCP-Wrappers instead of Netfilter/Iptables. "ignoreregex" is
@@ -97,7 +78,7 @@ logpath  = /var/log/mail.log
 enabled     = false
 filter      = sshd
 action      = hostsdeny
-              sendmail-whois[name=SSH, dest=you@example.com]
+              sendmail-whois[name=SSH, dest=you@mail.com]
 ignoreregex = for myuser from
 logpath     = /var/log/sshd.log
 
@@ -106,12 +87,11 @@ logpath     = /var/log/sshd.log
 
 [apache-tcpwrapper]
 
-enabled  = false
+enabled  =  true
 filter	 = apache-auth
-action   = hostsdeny
-logpath  = /var/log/apache*/*error.log
-           /home/www/myhomepage/error.log
-maxretry = 6
+action   = iptables[name=apache, port=http, protocol=tcp]
+logpath  = /var/log/httpd/error_log
+maxretry = 3
 
 # The hosts.deny path can be defined with the "file" argument if it is
 # not in /etc.
@@ -121,7 +101,6 @@ maxretry = 6
 enabled  = false
 filter   = postfix
 action   = hostsdeny[file=/not/a/standard/path/hosts.deny]
-           sendmail[name=Postfix, dest=you@example.com]
 logpath  = /var/log/postfix.log
 bantime  = 300
 
@@ -130,11 +109,11 @@ bantime  = 300
 
 [vsftpd-notification]
 
-enabled  = true
+enabled  = false 
 filter   = vsftpd
-action   = sendmail-whois[name=VSFTPD, dest=curt_wilhelm@yahoo.com]
+action   = sendmail-whois[name=VSFTPD, dest=you@mail.com]
 logpath  = /var/log/vsftpd.log
-maxretry = 5
+maxretry =3 
 bantime  = 1800
 
 # Same as above but with banning the IP address.
@@ -158,9 +137,17 @@ enabled  = true
 filter   = apache-badbots
 action   = iptables-multiport[name=BadBots, port="http,https"]
            sendmail-buffered[name=BadBots, lines=5, dest=curt_wilhelm@yahoo.com]
-logpath  = /var/logs/httpd/access_log
+logpath  = /var/log/httpd/access_log
 bantime  = 172800
 maxretry = 1
+
+[php-url-fopen]
+enabled = false
+action 	= iptables[name=php-url-fopen, port="http,https", protocol=tcp]
+filter  = php-url-fopen
+logpath = /var/logs/httpd/access_log
+maxretry = 1
+
 
 # Use shorewall instead of iptables.
 
@@ -169,48 +156,8 @@ maxretry = 1
 enabled  = false
 filter   = apache-noscript
 action   = shorewall
-           sendmail[name=Postfix, dest=you@example.com]
+           sendmail[name=Postfix, dest=you@mail.com]
 logpath  = /var/log/apache2/error_log
-
-# Ban attackers that try to use PHP's URL-fopen() functionality
-# through GET/POST variables. - Experimental, with more than a year
-# of usage in production environments.
-
-[php-url-fopen]
-
-enabled = false
-port    = http,https
-filter  = php-url-fopen
-logpath = /var/logs/httpd/access_log
-maxretry = 1
-
-# A simple PHP-fastcgi jail which works with lighttpd.
-# If you run a lighttpd server, then you probably will
-# find these kinds of messages in your error_log:
-# ALERT – tried to register forbidden variable ‘GLOBALS’
-# through GET variables (attacker '1.2.3.4', file '/var/www/default/htdocs/index.php')
-# This jail would block the IP 1.2.3.4.
-
-[lighttpd-fastcgi]
-
-enabled = false
-port    = http,https
-filter  = lighttpd-fastcgi
-# adapt the following two items as needed
-logpath = /var/log/lighttpd/error.log
-maxretry = 2
-
-# Same as above for mod_auth
-# It catches wrong authentifications
-
-[lighttpd-auth]
-
-enabled = false
-port    = http,https
-filter  = lighttpd-auth
-# adapt the following two items as needed
-logpath = /var/log/lighttpd/error.log
-maxretry = 2
 
 # This jail uses ipfw, the standard firewall on FreeBSD. The "ignoreip"
 # option is overridden in this jail. Moreover, the action "mail-whois" defines
@@ -222,7 +169,7 @@ maxretry = 2
 enabled  = false
 filter   = sshd
 action   = ipfw[localhost=192.168.0.1]
-           sendmail-whois[name="SSH,IPFW", dest=you@example.com]
+           sendmail-whois[name="SSH,IPFW", dest=you@mail.com]
 logpath  = /var/log/auth.log
 ignoreip = 168.192.0.1
 
@@ -238,27 +185,19 @@ ignoreip = 168.192.0.1
 #     category security {
 #         security_file;
 #     };
-# };
+# }
 #
 # in your named.conf to provide proper logging.
 # This jail blocks UDP traffic for DNS requests.
 
-# !!! WARNING !!!
-#   Since UDP is connection-less protocol, spoofing of IP and imitation
-#   of illegal actions is way too simple.  Thus enabling of this filter
-#   might provide an easy way for implementing a DoS against a chosen
-#   victim. See
-#    http://nion.modprobe.de/blog/archives/690-fail2ban-+-dns-fail.html
-#   Please DO NOT USE this jail unless you know what you are doing.
-#
-# [named-refused-udp]
-#
-# enabled  = false
-# filter   = named-refused
-# action   = iptables-multiport[name=Named, port="domain,953", protocol=udp]
-#            sendmail-whois[name=Named, dest=you@example.com]
-# logpath  = /var/log/named/security.log
-# ignoreip = 168.192.0.1
+[named-refused-udp]
+
+enabled  = false
+filter   = named-refused
+action   = iptables-multiport[name=Named, port="domain,953", protocol=udp]
+           sendmail-whois[name=Named, dest=you@mail.com]
+logpath  = /var/log/named/security.log
+ignoreip = 168.192.0.1
 
 # This jail blocks TCP traffic for DNS requests.
 
@@ -267,42 +206,15 @@ ignoreip = 168.192.0.1
 enabled  = false
 filter   = named-refused
 action   = iptables-multiport[name=Named, port="domain,953", protocol=tcp]
-           sendmail-whois[name=Named, dest=you@example.com]
+           sendmail-whois[name=Named, dest=you@mail.com]
 logpath  = /var/log/named/security.log
 ignoreip = 168.192.0.1
 
-# Multiple jails, 1 per protocol, are necessary ATM:
-# see https://github.com/fail2ban/fail2ban/issues/37
-[asterisk-tcp]
-
-enabled  = false
-filter   = asterisk
-action   = iptables-multiport[name=asterisk-tcp, port="5060,5061", protocol=tcp]
-           sendmail-whois[name=Asterisk, dest=you@example.com, sender=fail2ban@example.com]
-logpath  = /var/log/asterisk/messages
-maxretry = 10
-
-[asterisk-udp]
-
-enabled  = false
-filter	 = asterisk
-action   = iptables-multiport[name=asterisk-udp, port="5060,5061", protocol=udp]
-           sendmail-whois[name=Asterisk, dest=you@example.com, sender=fail2ban@example.com]
-logpath  = /var/log/asterisk/messages
-maxretry = 10
-
-# Jail for more extended banning of persistent abusers
-# !!! WARNING !!!
-#   Make sure that your loglevel specified in fail2ban.conf/.local
-#   is not at DEBUG level -- which might then cause fail2ban to fall into
-#   an infinite loop constantly feeding itself with non-informative lines
-[recidive]
-
-enabled  = false
-filter   = recidive
-logpath  = /var/log/fail2ban.log
-action   = iptables-allports[name=recidive]
-           sendmail-whois-lines[name=recidive, logpath=/var/log/fail2ban.log]
-bantime  = 604800  # 1 week
-findtime = 86400   # 1 day
-maxretry = 5
+[apache-myadmin]
+enabled = true
+filter   = apache-myadmin
+port = http,https
+logpath = /var/log/apache2/error.log
+action = iptables-multiport[name=apache-myadmin, port="http,https", protocol=tcp]
+maxretry = 2
+bantime = 84600
